# claude-usage-widget

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  howtouse.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
scripts/: install.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
