[package]
name = "claude-usage-widget"
version = "0.1.0"
description = "Claude Usage Desktop Widget — pixel-art health bars for your Claude usage limits"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "claude_usage_widget_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "macos-system-configuration"] }

# macOS-only: Keychain access and direct NSWindow Objective-C calls
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
objc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
